--- a/_locales/ja/Panel-strings.json
+++ b/_locales/ja/Panel-strings.json
@@ -1,35 +1,36 @@
 {
-	"Panel|block": "いぬ・ねこロボット",
+	"Panel|block": "パネル",
 	"{id:subcategory}Move": "動き",
-	"{id:subcategory}Motor": "モータ",
-	"{id:subcategory}LED": "光",
-	"{id:subcategory}Switch": "スイッチ、距離",
-	"{id:subcategory}LCD": "文字表示",
-	"{id:subcategory}Music": "音楽",
-	"{id:subcategory}Pad": "コントローラ（無線、傾き）",
-	"Panel.fwds|block": "前（2秒）:1～10回 %cycle",
-	"Panel.bwds|block": "後（2秒）:1～10回 %cycle",
-	"Panel.rights|block": "右（2秒）:1～10回 %cycle",
-	"Panel.lefts|block": "左（2秒）:1～10回 %cycle",
-	"Panel.stops|block": "止（1秒）",
-	"Panel.sitDowns|block": "おすわり（1秒）",
-	"Panel.happinesses|block": "ふせ（1秒）",
-	"Panel.ServoW|block": "サーボ（腰）：角度（-90～90°）%degree",
-	"Panel.ServoFR|block": "サーボ（前右）：角度（-90～90°）%degree",
-	"Panel.ServoFL|block": "サーボ（前左）：角度（-90～90°）%degree",
-	"Panel.ServoRR|block": "サーボ（後右）：角度（-90～90°）%degree",
-	"Panel.ServoRL|block": "サーボ（後左）：角度（-90～90°）%degree",
-	"Panel.LEDred|block": "LED（赤）：明るさ（0～100） %v",
-	"Panel.LEDgreen|block": "LED（緑）：明るさ（0～100） %v",
-	"Panel.LEDblue|block": "LED（青）：明るさ（0～100） %v",
-	"Panel.distance|block": "距離（cm）",
-	"Panel.showLiens|block": "全行の文字列 %text",
-	"Panel.showLine1|block": "1行の文字列 %text",
-	"Panel.showLine2|block": "2行の文字列 %text",
-	"Panel.musicDog|block": "いぬの歌",
-        "Panel.musicCat|block": "ねこの歌",
-	"Panel.radioGroup|block": "無線グループ：No, 1～83 %n",
-	"Panel.rotX|block": "傾き（左右）：-2～0～2",
-        "Panel.rotY|block": "傾き（前後）：-2～0～2",
-        "Panel.dispSlope|block": "傾き表示（LED）"
-}
+	"{id:subcategory}LED": "LED",
+	"Panel.RGB|block": "RGB（GRB順）",
+	"Panel.RGBW|block": "RGB+W",
+	"Panel.RGB_RGB|block": "RGB（RGB順）",
+	"Panel.Red|block": "赤",
+	"Panel.Orange|block": "だいだい",
+	"Panel.Yellow|block": "黄",
+	"Panel.Green|block": "緑",
+	"Panel.Blue|block": "青",
+	"Panel.Indigo|block": "あい",
+	"Panel.Violet|block": "すみれ",
+	"Panel.Purple|block": "紫",
+	"Panel.White|block": "白",
+	"Panel.showColor|block": "%strip|を%rgb=neopixel_colors|色に点灯する",
+	"Panel.showRainbow|block": "%strip|をレインボーパターン（色相%startHue|から%endHue|）に点灯する",
+	"Panel.showBarGraph|block": "%strip|棒グラフで点灯する 値%value|最大値%high",
+	"Panel.setPixelColor|block": "%strip|の%pixeloffset|番目のLEDを%rgb=neopixel_colors|色に設定する",
+	"Panel.setPixelWhiteLED|block": "%strip|の%pixeloffset|番目のLEDの白色を%white|に設定する",
+	"Panel.show|block": "%strip|を設定した色で点灯する",
+	"Panel.clear|block": "%strip|の設定を削除する",
+	"Panel.length|block": "%strip|のLEDの数",
+	"Panel.setBrightness|block": "%strip|の明るさを%brightness|に設定する",
+	"Panel.easeBrightness|block": "%strip|に設定されている色を明るさで調整する",
+	"Panel.range|block": "%strip|の%start|番目から%length|個のNeoPixel",
+	"Panel.shift|block": "%strip|に設定されている色をLED%offset|個分ずらす",
+	"Panel.rotate|block": "%strip|に設定されている色をLED%offset|個分ずらす（ひとまわり）",
+	"Panel.create|block": "端子%pin|に接続しているLED|%numleds|個のNeoPixel（モード%mode|）",
+	"Panel.rgb|block": "RGB（赤%red|緑%green|青%blue|）",
+	"Panel.colors|block": "%color",
+	"Panel.HSL.rotateHue|block": "HSL%hsl|の色相を%offset|ずらす",
+	"Panel.HSL.toRGB|block": "HSL%hsl|をRGBに変換",
+	"Panel.hsl|block": "HSL（色相%hue|彩度%sat|輝度%lum|）"
+  }
